feat() : add controller and service layers